assets/css/styles.css
/* ... */
.MenuMoon {
    overflow: visible;
    width: 40px;
    outline: none;
    position: absolute;
    transition: 0.2s all;
    transition-delay: 30ms;
    pointer-events: none;
    z-index: -1;
  }
  .MenuMoon.Moon1{
    z-index: 1;
  }
.MenuWrapper:hover .Moon2,.MenuWrapper:hover .Moon3{
    opacity: 70%;
}
.MenuWrapper:hover .Moon4,.MenuWrapper:hover .Moon5{
    opacity: 20%;
}
.MenuWrapper:hover .Moon2{
    transform: translateX(30px);
}
.MenuWrapper:hover .Moon3{
    transform: translateX(-30px);
}
.MenuWrapper:hover .Moon4{
    transform: translateX(55px);
}
.MenuWrapper:hover .Moon5{
    transform: translateX(-55px);
}

/*=========================================================
GLOBAL GRID
=========================================================*/
.GridWrapper{

    flex-flow: column;
    gap: 10px;
    overflow: visible;
    outline: 1px;
}
.GlobalGrid{
    row-gap: 0px;
    align-self: center;
    outline: none;
    place-items: center;
    display: grid;
    place-self: center;
    grid-template-columns: repeat(4, 220px);
    grid-template-rows: repeat(8, auto);
    width: 100%;
}

/*=========================================================
DISPLAY GRIDS
=========================================================*/
/*-----------------------
CrossBar
-----------------------*/
.main-title{
    font-family: header-font;

    grid-column: span 4;
    outline: none;
    font-size: 100px;
}
.second-title{
    font-family: header-font;

    grid-column: span 4;
    outline: none;
    text-align: left;
    font-size: 75px;
}
.CrossBar{
    display: grid;
row-gap: 40px;
    grid-template-columns: 1fr 1fr 1fr 1fr;
    grid-template-rows: 1fr 400px 1fr;

    width: 100%;
    height: 100%;
    grid-column: span 4;
}
.section-divider{
    grid-column: span 4;
    outline: none;
    width: 100%;
    height: 1px;
    grid-column: span 4;
box-shadow: 0px -2px 0px rgb(212, 139, 99);
}
.section-divider.no-line{
    height: 100px;

    box-shadow: none;
}
.section-divider.no-line.small{
    height: 50px;

    box-shadow: none;
}
.section-divider.no-line.micro{
    height: 20px;
    box-shadow: none;
}
.section-divider.no-line.large{
    height: 150px;
    box-shadow: none;
}
/*-----------------------*/

.hero{
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    grid-template-rows: 1fr;
    grid-column: span 4;
    width: 100%;
    height: 440;
    outline: none;
    align-items: center;
    justify-content: center;
}


.hero-card{
    display: grid;
    grid-template-columns: 1fr;
    grid-template-rows: 1fr;
    overflow: hidden;
    border-radius: 130px 130px 0 0;
}

 .hero-card section{
    grid-row: 1;
    grid-column: 1;
}

.hero-card .hero-card-cover{
    transition: 600ms;
    z-index: 1;
    
}
@media (pointer: none) { 

    .hero-card, .hero .hero-card-cover{
        display: none;
    }
} 
@media (pointer: coarse) { 

    .hero-card, .hero .hero-card-cover{
        display: none;
    }
} 
.hero-card, .hero .hero-card-cover{
   margin: 0 auto 0 auto;
   width: 260px;
    height: 440px;
}


.hero-card:hover .hero-card-cover{
   transform:translate(0, -100%);
}



.hover-card{
    display: grid;
    grid-template-columns: 1fr;
    grid-template-rows: 1fr;
    overflow: hidden;
}

 .hover-card section{
    grid-row: 1;
    grid-column: 1;
}
@media (pointer: none) { 

    .hover-card .hover-card-cover{
        display: none;
    }
} 
@media (pointer: coarse) { 

    .hover-card .hover-card-cover{
        display: none;
    }
} 



    .hover-card .hover-card-cover{
        transition: 500ms;
        z-index: 1;
        border-radius:  0px;
    }



 .hover-card{
    margin: 0 auto 0 auto;

}
.hover-card:hover .hover-card-cover{
   transform:translate(0, -101%);
}























.Seperator{
    display: inline-grid;
    background-color: var(--primary-color);
height: 600px;
width: 100%;
grid-column: span 4;
}

.DisplayGrid{
    display: inline-grid;
    overflow: hidden;
    background-color: var(--background-color);
    height: 440px;
    padding: 0px;
    margin: 0px;
    column-gap: 1.5%;
    row-gap: 1.5%;
}
.DisplayGrid.Style1, .DisplayGrid.Style2{
    padding: 1%;
    margin: 1%;
    height: 440px;
    background-color: transparent;
    grid-column: span 1;
    overflow: hidden;

}

.DisplayGrid.Style1{
    width: 100%;

    grid-template-columns: repeat(1, 1fr);
    grid-template-rows: repeat(2, 1fr);
}
.DisplayGrid.Style2{
    width: 90%;

    grid-template-columns: repeat(2, 1fr);
    grid-template-rows: repeat(4, 1fr);
}





.DisplayGrid.Style1.span-one, .DisplayGrid.Style2.span-one
{
    grid-template-columns: repeat(1, 1fr);
    grid-column: span 1;
}
.DisplayGrid.Style2.span-one{grid-template-columns: repeat(2, 1fr);}
.DisplayGrid.Style1.span-one{grid-template-columns: repeat(1, 1fr);}


.DisplayGrid.Style1.span-two, .DisplayGrid.Style2.span-two
{
    grid-template-columns: repeat(2, 1fr);
    grid-column: span 2;
}
.DisplayGrid.Style2.span-two{grid-template-columns: repeat(4, 1fr);}
.DisplayGrid.Style1.span-two{grid-template-columns: repeat(2, 1fr);}

.DisplayGrid.Style1.span-three, .DisplayGrid.Style2.span-three
{
    grid-template-columns: repeat(3, 1fr);
    grid-column: span 3;
}
.DisplayGrid.Style2.span-three{grid-template-columns: repeat(6, 1fr);}
.DisplayGrid.Style1.span-three{grid-template-columns: repeat(3, 1fr);}

.DisplayGrid.Style1.span-four, .DisplayGrid.Style2.span-four
{
    grid-template-columns: repeat(4, 1fr);
    grid-column: span 4;
}
.DisplayGrid.Style2.span-four{grid-template-columns: repeat(8, 1fr);}
.DisplayGrid.Style1.span-four{grid-template-columns: repeat(4, 1fr);}




.DisplayGrid.Style1.span-one-vert, .DisplayGrid.Style2.span-one-vert
{
    grid-row: span 1;
    height: 220px;
}


.DisplayGrid.Style2.span-one-vert{grid-template-rows: repeat(2, 1fr);}
.DisplayGrid.Style1.span-one-vert{grid-template-rows: repeat(1, 1fr);}
/* ... */

